[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/icons/empty_slot_frame-512.png" type="Texture" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/panels/skill_tree/straight_connection-4096.png" type="Texture" id=3]
[ext_resource path="res://ui/panels/skill_tree/skill_tree_panel.gd" type="Script" id=4]
[ext_resource path="res://ui/panels/skill_tree/r_diagonal_connection-4096.png" type="Texture" id=5]
[ext_resource path="res://ui/panels/skill_tree/l_diagonal_connection-4096.png" type="Texture" id=6]

[node name="skill_tree_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="layout"]
margin_right = 3840.0
margin_bottom = 139.0

[node name="life" type="Button" parent="layout/buttons"]
margin_left = 381.0
margin_right = 572.0
margin_bottom = 139.0
size_flags_horizontal = 6
text = "Life"
expand_icon = true

[node name="fire" type="Button" parent="layout/buttons"]
margin_left = 1350.0
margin_right = 1528.0
margin_bottom = 139.0
size_flags_horizontal = 6
text = "Fire"
expand_icon = true

[node name="blood" type="Button" parent="layout/buttons"]
margin_left = 2270.0
margin_right = 2531.0
margin_bottom = 139.0
size_flags_horizontal = 6
text = "Blood"
expand_icon = true

[node name="darkness" type="Button" parent="layout/buttons"]
margin_left = 3149.0
margin_right = 3577.0
margin_bottom = 139.0
size_flags_horizontal = 6
text = "Darkness"
expand_icon = true

[node name="split" type="HSplitContainer" parent="layout"]
margin_top = 147.0
margin_right = 3840.0
margin_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="tree" type="Panel" parent="layout/split"]
margin_right = 1908.0
margin_bottom = 2013.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="example" type="Control" parent="layout/split/tree"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot17" type="TextureButton" parent="layout/split/tree/example"]
anchor_right = 1.0
anchor_bottom = 0.2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_progress2" type="TextureProgress" parent="layout/split/tree/example"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.3
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 2
tint_under = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
tint_progress = Color( 0.831373, 0.831373, 0.831373, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_progress4" type="TextureProgress" parent="layout/split/tree/example"]
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.3
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 2
tint_under = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
tint_progress = Color( 0.831373, 0.831373, 0.831373, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_progress3" type="TextureProgress" parent="layout/split/tree/example"]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.3
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 2
tint_under = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
tint_progress = Color( 0.831373, 0.831373, 0.831373, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot18" type="TextureButton" parent="layout/split/tree/example"]
anchor_left = 0.7
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot19" type="TextureButton" parent="layout/split/tree/example"]
anchor_top = 0.3
anchor_right = 0.3
anchor_bottom = 0.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot20" type="TextureButton" parent="layout/split/tree/example"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Panel" parent="layout/split"]
margin_left = 1932.0
margin_right = 3840.0
margin_bottom = 2013.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="icon" type="TextureRect" parent="layout/split/details"]
anchor_right = 1.0
anchor_bottom = 0.3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="layout/split/details"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.8
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slots" type="HBoxContainer" parent="layout/split/details"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot0" type="TextureButton" parent="layout/split/details/slots"]
margin_right = 375.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="TextureButton" parent="layout/split/details/slots"]
margin_left = 383.0
margin_right = 758.0
margin_bottom = 402.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="slot2" type="TextureButton" parent="layout/split/details/slots"]
margin_left = 766.0
margin_right = 1141.0
margin_bottom = 402.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="slot3" type="TextureButton" parent="layout/split/details/slots"]
margin_left = 1149.0
margin_right = 1524.0
margin_bottom = 402.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="slot4" type="TextureButton" parent="layout/split/details/slots"]
margin_left = 1532.0
margin_right = 1908.0
margin_bottom = 402.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_skill_tree_panel_visibility_changed"]
[connection signal="pressed" from="layout/buttons/life" to="." method="_on_life_pressed"]
[connection signal="pressed" from="layout/buttons/fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="layout/buttons/blood" to="." method="_on_blood_pressed"]
[connection signal="pressed" from="layout/buttons/darkness" to="." method="_on_darkness_pressed"]
[connection signal="pressed" from="layout/split/tree/example/slot17" to="." method="_on_slot_pressed" binds= [ 0 ]]
[connection signal="pressed" from="layout/split/tree/example/slot18" to="." method="_on_slot_pressed" binds= [ 0 ]]
[connection signal="pressed" from="layout/split/tree/example/slot19" to="." method="_on_slot_pressed" binds= [ 0 ]]
[connection signal="pressed" from="layout/split/tree/example/slot20" to="." method="_on_slot_pressed" binds= [ 0 ]]
[connection signal="pressed" from="layout/split/details/slots/slot0" to="." method="_on_slot_pressed" binds= [ 0 ]]
[connection signal="pressed" from="layout/split/details/slots/slot1" to="." method="_on_slot_pressed" binds= [ 1 ]]
[connection signal="pressed" from="layout/split/details/slots/slot2" to="." method="_on_slot_pressed" binds= [ 2 ]]
[connection signal="pressed" from="layout/split/details/slots/slot3" to="." method="_on_slot_pressed" binds= [ 3 ]]
[connection signal="pressed" from="layout/split/details/slots/slot4" to="." method="_on_slot_pressed" binds= [ 4 ]]
